@@ -15,6 +15,11 @@ See http://www.pserc.cornell.edu/matpower/ for more info.
 Changes since 4.1
 -----------------
 
+3/11/14
+    - Fixed bugs in runpf() related to enforcing generator reactive
+      power limits when all generators violate limits or when
+      the slack bus is converted to PQ.
+
 3/10/14
     - Fixed bug in qps_gurobi() where return status values for
       NUMERIC and SUBOPTIMAL were swapped. Added INPROGRESS status.
